# solis-cloud-control

./: AGENTS.md  CONTRIBUTING.md  README.md  hacs.json  mise.toml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  general-issue.md  new-solis-inverter-support-request.md
.github/agents/: home-assistant-integration-expert.agent.md
.github/chatmodes/: home-assistant-integration-expert.chatmode.md
.github/instructions/: markdown.instructions.md  python.instructions.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  stale.yml  validate.yml
config/: configuration.yaml
custom_components/solis_cloud_control/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  data.py  datetime.py  diagnostics.py  entity.py  inverter.py  inverter_factory.py  inverter_utils.py  manifest.json  number.py  number_utils.py  safe_converters.py  select.py  sensor.py  switch.py  text.py  utils.py
scripts/: api_tester.py
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_datetime.py  test_diagnostics.py  test_entity.py  test_init.py  test_inverter_factory.py  test_inverter_utils.py  test_number.py  test_select.py  test_sensor.py  test_switch.py  test_text.py
tests/api/: test_solis_api.py
tests/domain/: test_charge_discharge_settings.py  test_storage_mode.py
tests/inverters/: test_default_hybrid_inverter.py  test_inverter.py  test_inverter_factory.py  test_inverter_utils.py
tests/utils/: test_retry_policy.py
(+24 files in other folders)
