[project]
name = "solis-cloud-control"
version = "1.0.0"
requires-python = ">=3.13.2" # keep in sync with Home Assistant
dependencies = [
    "homeassistant==2025.12.0",
]

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component==0.13.298", # keep in sync with Home Assistant
    "ruff",
    "ty"
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "-rA --cov=custom_components --cov-branch --cov-fail-under=98"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "ANN", # flake8-annotations
    "ARG", # flake8-argument-names    
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TCH", # flake8-type-checking
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes    
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001",
    "ANN101",
    "ANN201",
    "ANN202",
    "ARG001",
]

[tool.coverage.report]
exclude_also = ["raise NotImplementedError"]

[tool.ty.src]
include = ["custom_components/**"]